syntax = "proto3";

package protocol;

option java_package = "org.menina.rail.protocol";
option java_outer_classname = "RpcHeader";

enum SerializationType {
    PROTOBUF = 0;
    NONE = 1;
}

enum CompressType {
    COMPRESS_NONE = 0;
    SNAPPY = 1;
    GZIP = 2;
}

enum ResponseCode {
    SUCCESS = 0;
    FAIL = 1;
}

enum MessageType {
    REQUEST = 0;
    RESPONSE = 1;
    HEARTBEAT = 2;
}

message RequestHeader {
    uint64 requestId = 1;
    uint32 bodyLength = 2;
    string method_name = 3;
    string version = 4;
    CompressType compress_type = 5;
    MessageType message_type= 6;
    map<string, string> attachments = 7;
}

message ResponseHeader {
    uint64 requestId = 1;
    uint32 bodyLength = 2;
    ResponseCode response_code = 3;
    string response_message = 4;
}